2006-09-24  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayer.cs: RemotePlayer does
	not need to handle a singleton case in managed land anymore - the 
	remote object holds 100% of the required functionality

	* src/Banshee.Base/DBusPlayer.cs:
	* src/Banshee.Base/DBusRemote.cs:
	* src/Banshee.Base/PowerManagement.cs: Clean up

2006-09-24  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayer.cs: Use new managed
	DBus, simplified message handling as the signal signature is now ia{sv}
	which maps directly to delegate(MessageType, IDictionary<string,object>)

	* src/Banshee.MediaEngine/Helix/HelixRemotePlayerEngine.cs: Adjust for
	minor changes in HelixRemotePlayer

	* src/Banshee.MediaEngine/Helix/Makefile.am: Link against new managed
	DBus, drop old dbus-sharp link; we are now 80% managed DBus

2006-09-23  James Willcox  <snorp@snorp.net>

	* src/Bansee.Plugins/Daap/daap-sharp/*: updated to latest

2006-09-23  Alp Toker  <alp@atoker.com>

	* dbus-sharp/*: Update bundled NDesk.DBus, NDesk.DBus.GLib.
	Support for Mono <= 1.1.13, optimizations, improved API.

2006-09-22  Alp Toker  <alp@atoker.com>

	* src/Banshee.Base/DBusPlayer.cs:
	* src/Banshee.Base/DBusRemote.cs:
	* src/Banshee.Base/PowerManagement.cs:
	* tools/BansheeDBusClient.cs: Use DApplication.SessionBus singleton

2006-09-21  Alp Toker  <alp@atoker.com>

	* dbus-sharp/*: Update bundled NDesk.DBus, NDesk.DBus.GLib and map.
	Now works on AMD64, PPC, plus bugfixes and new API.

2006-09-21  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/DaapSource.cs: implement IImportable
	and IImportSource, so you can now import and dnd from DAAP shares.
	Also, add support for remote playlists.

	* src/Banshee.Plugins/Daap/DaapPlaylistSource.cs: added

2006-09-21  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/TrackInfoHeader.cs:
	* src/Banshee.Base/TrackInfoPopup.cs: Patch from Sebastian Dröge to